# nlohmann-json-tutorial

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/fetch/: json.cmake  opencv.cmake
example/: CMakeLists.txt  callbackdemo.cpp
